siunits 0.2
===========

* Summary methods (sum, max, min, range) now work with Quantities.  

siunits 0.1-3
=============

* Bugfix: `+` and `-` were broken.

siunits 0.1-2
=============

* Bugfix: `as.Quantity(q, unit)` did not set the new units correctly.

siunits 0.1-1
=============

* `as.Quantity()` and arithmetic operations on Quantities now preserve attributes
  (eg, names).

siunits 0.1
===========

* First release. 