@@ -1,7 +1,7 @@
 Package: siunits
 Maintainer: James Geddes <james.geddes@decc.gsi.gov.uk>
 Author: James Geddes <james.geddes@decc.gsi.gov.uk>
-Version: 0.1-0
+Version: 0.2
 License: GPL-3
 Title: SI (and other) units and tools for dealing with physical quantities
 Description: 
