@@ -22,6 +22,7 @@ S3method(as.character,Quantity)
 S3method(c,Quantity)
 S3method(format,Quantity)
 S3method(format,Unit)
+S3method(mean,Quantity)
 S3method(print,Quantity)
 S3method(print,Signature)
 S3method(print,Unit)
